--- a/TarsierSpaceTechnology/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,21 @@
-﻿V5.8 Added support for ResearchBodies mod (MUST HAVE ResearchBodies V1.6 or above). 
+﻿V5.9 Fixed TST AppLauncher Icon appearing in map view even when active vessel has no TST parts.    
+	Fixed error on start-up for integration with Kopernicus mod.
+	Fixed KIS/KAS support for the small Science Drive.
+	Massive re-factor of the code base for future ease of maintenace support and preparations for KSP 1.1 (THIS DOES NOT mean TST is ready for KSP 1.1).	
+	Added additional Space Telescope part config file parameters for future integration with other telescopes (like DMagic's Orbital Science).
+	Fixed the TST icon showing sometimes when it shouldn't (Tracking Station, In Flight Map mode, when active vessel has no TST parts on it).
+	There is now a Settings menu available from the SpaceCenter so you don't have to edit the config file directly.
+		Settings you can change:
+		If you try to make any of these settings larger than your screen size TST will automatically cap it. If you set it too small, bad luck, 
+		change it back to a larger value.
+		The size of the ChemCam camera window for both small and large size setting (in pixels).
+		The size of the Telescope's camera window for both small and large size setting (in pixels).
+		"Use Stock App Icon" - if ON will use the Stock App Icon AppLauncher button, if Off will use Blizzy's toolbar. 
+		(requires you to change scene for this setting to take effect, eg: go to Editor, Flight, TrackingCentre, etc).
+		"Debug Logging ON" - This will turn debugging messages in your output log ON or OFF. Leave it OFF (As it causes performace issues) unless you are having
+		some problems with TST, then turning it on and capturing your log and sending to me greatly helps me to help you.
+		ToolTips - Yes the GUI windows now have Tooltips - you can turn them on and off here.
+V5.8 Added support for ResearchBodies mod (MUST HAVE ResearchBodies V1.6 or above). 
     If ResearchBodies mod is installed then:-   
 	Telescope and ChemCam contracts will NOT generate for bodies that have yet to be discovered.   
 	If you take a picture with a Telescope of a body that is yet to be discovered AND transmit/recovery it, it will become discovered.    
