--- a/TarsierSpaceTechnology/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,9 @@
-﻿V6.0 Ksp 1.1 Experimentals.
+﻿V6.0 KSP 1.1 "Turbo Charged Edition" - Release for the full release of KSP 1.1.
+This version is NOT backwardly compatible with KSP 1.0.5 or earlier versions. If you are still using KSP 1.0.5 download V5.9 of TST.
+This version has NOT been tested and does not work with ResearchBodies mod (as that mod has to be updated to KSP 1.1 first).
+Fixed the Settings Menu settings for the Telescope large GUI size.
+Added new Editor search tags: 'tarsier tst advanced telescope science'
+V5.9.1/2 Ksp 1.1 Experimentals. 
 V5.9 Fixed TST AppLauncher Icon appearing in map view even when active vessel has no TST parts.    
 	Fixed error on start-up for integration with Kopernicus mod.
 	Fixed KIS/KAS support for the small Science Drive.
