--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,8 @@
-﻿V6.0 KSP 1.1 "Turbo Charged Edition" - Release for the full release of KSP 1.1.
+﻿V6.1 "Bug Fixes"
+Compiled against KSP 1.1.2.
+Fixed potential issue with ToolTip log spam.
+Fixed V6.0 bug where gas planets and the sun were eligible for ChemCam contracts.
+V6.0 KSP 1.1 "Turbo Charged Edition" - Release for the full release of KSP 1.1.
 This version is NOT backwardly compatible with KSP 1.0.5 or earlier versions. If you are still using KSP 1.0.5 download V5.9 of TST.
 This version has NOT been tested and does not work with ResearchBodies mod (as that mod has to be updated to KSP 1.1 first).
 Fixed the Settings Menu settings for the Telescope large GUI size.
