--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,6 +1,11 @@
-﻿V6.2 "Kopernicus & other fixes"
-	Changed Telescope Cameras to now show the SkyBox and Atmosphere shading.
+﻿V6.2 "Kopernicus, Science & other Enhancements/Fixes"
+	Changed Telescope Cameras to now show the SkyBox and Atmosphere shading. Skybox zooms proportional to the Camera zoom (no more pixelated skybox).
+	Skybox Camera Zooming can be disabled completely by manually changing the Config.cfg file field ZoomSkyBox to False.
 	Fixed scroll window in the TST settings menu.
+	Added Maximum number of ChemCam contracts setting to TST settings menu (was in config file, but not in in-game menu). - Only available in Career mode.
+	Added Restrict ChemCam Contracts setting to TST settings menu (was in config file, but not in in-game menu).- Only available in Career mode.
+	TST settings can now switch between ToolBar mod Icon and AppLauncher (Stock) Icon immediately without requiring a scene change.
+	TST settings will now recognise when ToolBar is removed and change to the Stock Icon by default.
 	More robust Science checking when taking pictures - capture failures and better logging in error situations.
 	Fixed Remote Tech integration - Requires V 1.7 and up of Remote Tech.
 	Sigma Binary internal Bodies (not the actual bodies) should no longer appear in the Targets list for the Telescopes.
@@ -10,12 +15,10 @@
 	Added KSPedia pages for TST.
 	Added ability to send science directly from the Space Telescopes, ChemCam and SSD's to an attached Science Lab.
 	Improved screen messages when moving and deleting science data.
+	Module Manager config file included to turn off Kopernicus OnDemand texture loading until a more permanent solution can be found.
 	Optional Module Manager config file included to convert DMagic Orbital Science (DMOS) Little Brother and Big Brother Surveillance Camera parts into TST Telescopes.
 	If activated these parts from DMOS will function as both TST Telescopes and DMOS Surveillance Camera's.
-	This file is supplied de-activated. To activate, remove the ".optional" from the end of the filename of the file /GameData/TarsierSpaceTech/DmagicOrbitalScienceScopes.cfg.optional.
-	Optional Module Manager config file included to turn off Kopernicus OnDemand texture loading. If you are experiencing extreme lag when using TST with Kopernicus mod and planet packs
-	then please activate this file until a more permanent solution can be found.
-	This file is supplied de-activated. To activate, remove the ".optional" from the end of the filename of the file /GameData/TarsierSpaceTech/KopernicusOnDemandOff.cfg.optional. 
+	This file is supplied de-activated. To activate, remove the ".optional" from the end of the filename of the file /GameData/TarsierSpaceTech/DmagicOrbitalScienceScopes.cfg.optional.		
 
 V6.1 "Bug Fixes"
 	Compiled against KSP 1.1.2.
