--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,5 @@
-﻿V6.5 "Fixes"
+﻿V6.5 "KSP 1.2"
+	Changes for KSP 1.2.
 	Added a check to Contract generation to ensure the TST parts are actually loaded in-game (removes log spam if they aren't).
 V6.4 "ResearchBodies 1.8"
 	Compatible version for integration with ResearchBodies V1.8.
