--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,5 @@
-﻿V6.6 "ResearchBodies 1.9 & Bug Fixes"
+﻿V6.6 "KSP 1.2.1 & ResearchBodies 1.9"
+	Re-compile for KSP 1.2.1.
 	Moved initializers out of ..ctor to avoid Unity messages.
 	Eliminate NullRef errors on scene change for onGUI (was issuing two errors each time you switched scene).
 	Support ResearchBodies 1.9.
