--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,10 +1,12 @@
-﻿V6.6.1
+﻿V6.6.2
+	Fix NRE on vessel switch in MapMode and with TST GUI open.
+V6.6.1
 	Fix ChemCam crashing the editor scene.
 V6.6 "KSP 1.2.1 & ResearchBodies 1.9"
 	Re-compile for KSP 1.2.1.
 	Moved initializers out of ..ctor to avoid Unity messages.
 	Eliminate NullRef errors on scene change for onGUI (was issuing two errors each time you switched scene).
-	Support ResearchBodies 1.9.
+	Support ResearchBodies 1.9.g if 
 V6.5 "KSP 1.2"
 	Changes for KSP 1.2.
 	Added a check to Contract generation to ensure the TST parts are actually loaded in-game (removes log spam if they aren't).
