--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,10 @@
-﻿V6.6.2
+﻿V6.7
+	Re-compile for KSP 1.3.
+	Localized for Languages. Translation volunteers welcome. ;)
+	Show Data Corruption Percentage and EC usage for SSDs in their PAW.
+	SSDs now check if infinite Electric Charge cheat option is on or off.
+	Performance improvements under the hood.
+V6.6.2
 	Fix NRE on vessel switch in MapMode and with TST GUI open.
 V6.6.1
 	Fix ChemCam crashing the editor scene.
