Fix CB and Galaxy target list in Telescopes UI, also will update in flight.

--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,7 @@
-﻿V6.9
+﻿V7.0
+	Fix List of Celestial Bodies display for targeting in the Telescopes UI.
+	Also the same Celestial Body list will update while in flight if the player is using a Contracts app that accepts a contract for a Celestial Body.
+V6.9
 	Fix ChemCam not finding the ground/celestial body.
 	Also allow ChemCam and Telescopes to be opened and closed in VAB/SPH to allow user to check part placement when camera is open.
 V6.8
