--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,6 @@
-﻿V7.0
+﻿V7.1
+	Re-compile for KSP 1.3.1
+V7.0
 	Fix List of Celestial Bodies display for targeting in the Telescopes UI.
 	Also the same Celestial Body list will update while in flight if the player is using a Contracts app that accepts a contract for a Celestial Body.
 V6.9
