--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,6 @@
-﻿V7.3
+﻿V7.4
+	Re-compile for KSP 1.5.x
+V7.3
 	Re-compile for KSP 1.4.1
 V7.2
 	Fix integration with ResearchBodies so ResearchBodies discovered bodies still show even if a TST contract has not been completed for them.
