--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,8 @@
-﻿V7.9
+﻿V7.10
+	Update for KSP 1.9.x
+	Remove mini AVC support.
+	Chinese Localization by 6DYZBX.
+V7.9
 	Fix Bodies/Galaxies not appearing even when part of an active contract and toggling "show only contract targets" in the Telescope UI in career games.
 	Fix the broken chem cam when trying to open it in flight.
 V7.8
