--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Changelog.txt
@@ -1,4 +1,7 @@
-﻿V7.11
+﻿V7.12
+	Update for KSP 1.11.x
+	Added Inventory/EVA construction settings for the chemcam and science drives.	
+V7.11
 	Update for KSP 1.10.x
 	Russian Localization udpates courtesy of Davian Lin 
 V7.10
